# intent_router_harness

./: .env.example  .gitignore  AGENTS.md  README.md  agent.md  environment.yml  mock_assistant_router_stream.py  pyproject.toml
docs/: ASSISTANT_PROTOCOL_REGRESSION.md  DEPLOYMENT.md  DESIGN.md  core-functional-design.html  core-functional-design.md  current-service-architecture.html  current-service-architecture.md  progressive-context-loading-technical-requirements.md  router-service-助手协议回归测试用例-v0.5.md  router-service-助手协议回归测试用例-v0.6.md  智能路由上下文加载需求文档.md
examples/: finance-router-harness.toml  mock_config_server.py
examples/mock_skills/balance/: SKILL.md
examples/mock_skills/follow_up/: SKILL.md
examples/mock_skills/transfer/: SKILL.md
k8s/: intent-router-harness.yaml
regressions/: assistant_protocol_v0_5.json  assistant_protocol_v0_6.json
skills/bill-payment-routing/: SKILL.md
skills/finance-routing/: SKILL.md
skills/finance-routing/references/: ref_001.md
src/intent_router_harness/: __init__.py  __main__.py  asgi.py  assistant_protocol.py  assistant_service.py  config.py  contracts.py  debug_ui.py  llm.py  planner.py  regression.py  runtime.py  schema.py  server.py  service.py  service_factory.py  session_store.py  skills.py  trace.py
src/router_app/: __init__.py  app.py  main.py  settings.py
tests/: conftest.py  test_api.py  test_asgi.py  test_assistant_protocol_regression.py  test_assistant_service.py  test_config_validation.py  test_heuristic_planner.py  test_mock_config_server.py  test_planner_prompt.py  test_prompt_harness.py  test_router_service.py  test_service.py
(+23 files in other folders)
